[tool.poetry]
name = "kyla"
version = "0.1.0"
description = "Amazon MCF Integration with Shopify"
authors = ["Deepak, Paul"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
httpx = "^0.27.2"
pydantic = "^2.9.2"
boto3 = "^1.35.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"